<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_icon_info"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_icon_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_icon_settings"
            android:title="@string/menu_settings"
            android:enabled="false" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_icon_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_icon_exit"
            android:title="@string/menu_exit" />
    </group>

</menu>
